--- a/.project
+++ b/.project
@@ -1,9 +1,12 @@
 # Gambas Project File 3.0
-Title=Test Structures
+Title=Shm Mem
 Startup=NewMemBlockClassTest
-Version=0.0.1
+Version=2.0.1
+Description="This provides an interface to the Linux Shared memory functions. Allowing the creation and sharing of shared memory segments accross any number of local applications or tasks.\n\nTo do this it implements  an interface which allows any valid gambas object of variable to be directly stored or accessed via the inteface\n\nexample::\nWith ShmMem\n !a = \"this\"\n!b = 1\n\nprint !a, !b\n\nend with\nwith shared"
+Authors="JustLostInTime, Brian G"
 TabSize=4
 Language=en_US
 Type=Component
 ForceBytecodeVersion=3.18
+Vendor=Westwood
 Packager=1
