--- a/.settings
+++ b/.settings
@@ -1,9 +1,27 @@
 [Debug]
 Breakpoints={}
+UseTerminal=False
+RedirectStderr=False
+UseHttpServer=False
+Remote=False
+Environment=["GB_NO_JIT=1","GB_JIT_DEBUG=1"]
+RemoteEnvironment=[]
+Arguments=[]
+
+[DebugWindow]
+Count=0
+
+[Executable]
+DoNotIncrementVersion=False
+NoTestModule=False
+Path="/home/brian/bin/shmmem.gambas"
 
 [FCommit]
-LastCommit="Initial Commit.\n* NEW: Seperated this from SharedMem component"
+LastCommit="Update project information\n* NEW: Updated project information"
 
 [OpenFile]
+Count=0
+
+[Watches]
 Count=0
 
