--- a/.settings
+++ b/.settings
@@ -4,7 +4,9 @@ UseTerminal=False
 RedirectStderr=False
 UseHttpServer=False
 Remote=False
-Environment=["GB_NO_JIT=1","GB_JIT_DEBUG=1"]
+Environment=[]
+RemoteEnvironment=[]
+Arguments=[]
 
 [DebugWindow]
 Count=0
