Cleanup ShmClass - storable classes read/write examples
* Opt: cleanup compile warnings

--- a/.project
+++ b/.project
@@ -6,7 +6,7 @@ Description="This provides an interface to the Linux Shared memory functions. Al
 Authors="JustLostInTime, Westwood"
 TabSize=4
 Language=en_US
-Type=Component
+Type=Library
 ForceBytecodeVersion=3.18
 Maintainer=brian
 Vendor=Westwood
@@ -14,7 +14,7 @@ Address=justlostintime@gmail.com
 Url=https://github.com/justlostintime
 License=General Public License
 Prefix=1
-PackageName=gambas3-gb-shmmem-2.0.8
+PackageName=westwood-shmmem-2.0.6
 RuntimeVersion="3.18"
 Packager=1
 Systems=ubuntu
