Cleanup ShmClass - storable classes read/write examples
* Opt: cleanup compile warnings

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 # Gambas Project File 3.0
 Title=ShmMem
-Startup=ShmClassesText
-Version=2.0.5
+Startup=NewUseShm
+Version=2.0.9
 Description="This provides an interface to the Linux Shared memory functions. Allowing the creation and sharing of shared memory segments accross any number of local applications or tasks.\n\nTo do this it implements  an interface which allows any valid gambas object of variable to be directly stored or accessed via the inteface\n\nexample::\nPublic Sub Main()\nMyShm = new ShmMem\n\nWith MyShm\n\n !a = \"this\"\n !b = 1\n\nprint !a, !b\n\nend with\nend"
 Authors="JustLostInTime, Westwood"
 TabSize=4
@@ -14,7 +14,7 @@ Address=justlostintime@gmail.com
 Url=https://github.com/justlostintime
 License=General Public License
 Prefix=1
-PackageName=westwood-shmmem-2.0.6
+PackageName=westwood-shmmem-2.0.5
 RuntimeVersion="3.18"
 Packager=1
 Systems=ubuntu
