Cleanup ShmClass - storable classes read/write examples
* Opt: cleanup compile warnings

--- a/.project
+++ b/.project
@@ -1,8 +1,8 @@
 # Gambas Project File 3.0
 Title=ShmMem
 Startup=NewUseShm
-Version=2.0.9
-Description="This provides an interface to the Linux Shared memory functions. Allowing the creation and sharing of shared memory segments accross any number of local applications or tasks.\n\nTo do this it implements  an interface which allows any valid gambas object of variable to be directly stored or accessed via the inteface\n\nexample::\nPublic Sub Main()\nMyShm = new ShmMem\n\nWith MyShm\n\n !a = \"this\"\n !b = 1\n\nprint !a, !b\n\nend with\nend"
+Version=2.0.10
+Description="This provides an interface to the Linux Shared memory functions. Allowing the creation and sharing of shared memory segments across any number of local applications or tasks.\n\nTo do this it implements  an interface which allows any valid gambas object of variable to be directly stored or accessed via the inteface\n\nexample::\nPublic Sub Main()\nMyShm = new ShmMem\n\nWith MyShm\n\n !a = \"this\"\n !b = 1\n\nprint !a, !b\n\nend with\nend"
 Authors="JustLostInTime, Westwood"
 TabSize=4
 Language=en_US
@@ -19,3 +19,5 @@ RuntimeVersion="3.18"
 Packager=1
 Systems=ubuntu
 Groups=ubuntu:"utils"
+GambasVersion=3.19
+WebSite=https://github.com/justlostintime/ShmMem
