--- a/.settings
+++ b/.settings
@@ -3,18 +3,18 @@ shmMem=[234]
 ShmNotifyEntry=[54]
 
 [Debug]
-Breakpoints={"ShmListVariables":[15,11]}
+Breakpoints={}
 UseTerminal=False
 RedirectStderr=False
 UseHttpServer=False
 Remote=False
 Profiling=False
 Environment=["GB_NO_JIT=1"]
+RemoteEnvironment=[]
+Arguments=[]
 
 [DebugWindow]
-Count=2
-DebugWindow[1]="PidQueue"
-DebugWindow[2]="Sym"
+Count=0
 
 [DebugWindow/BaseObject]
 Geometry=[2192,325,252,56]
@@ -29,13 +29,16 @@ Geometry=[834,445,411,261]
 Geometry=[3025,771,252,56]
 
 [DebugWindow/ListHead]
-Geometry=[834,512,252,56]
+Geometry=[834,512,504,387]
 
 [DebugWindow/ListHead.Tag]
 Geometry=[834,498,252,56]
 
 [DebugWindow/ListItem]
-Geometry=[834,381,611,290]
+Geometry=[834,381,611,330]
+
+[DebugWindow/ListItem.Tag]
+Geometry=[848,395,252,376]
 
 [DebugWindow/Listof]
 Geometry=[2033,375,364,313]
@@ -62,13 +65,22 @@ Geometry=[834,445,471,258]
 Geometry=[848,459,252,276]
 
 [DebugWindow/NotifyQueue]
-Geometry=[834,498,252,416]
+Geometry=[834,498,561,480]
 
 [DebugWindow/NotifyQueue.AllLists]
 Geometry=[2195,300,577,377]
 
 [DebugWindow/NotifyQueue.ListHead]
 Geometry=[2024,105,252,250]
+
+[DebugWindow/NotifyQueue.VarMem]
+Geometry=[848,512,252,130]
+
+[DebugWindow/NotifyVar]
+Geometry=[834,421,518,280]
+
+[DebugWindow/NotifyVar.Name]
+Geometry=[848,435,252,504]
 
 [DebugWindow/NotifyVars]
 Geometry=[834,512,252,56]
@@ -81,6 +93,9 @@ Geometry=[2754,498,252,56]
 
 [DebugWindow/NotifyVars["dog"].NotifyObject]
 Geometry=[2782,446,252,190]
+
+[DebugWindow/OnNew]
+Geometry=[745,561,252,304]
 
 [DebugWindow/PidQueue]
 Geometry=[834,512,252,56]
@@ -107,7 +122,7 @@ Geometry=[2276,183,252,56]
 Geometry=[834,512,252,56]
 
 [DebugWindow/Sym]
-Geometry=[834,512,252,210]
+Geometry=[2184,263,252,56]
 
 [DebugWindow/Sym.Name]
 Geometry=[848,479,328,508]
@@ -166,6 +181,9 @@ Geometry=[834,512,252,56]
 [DebugWindow/Value]
 Geometry=[2064,424,753,517]
 
+[DebugWindow/VarExtended]
+Geometry=[834,388,252,276]
+
 [DebugWindow/VarMem]
 Geometry=[834,498,252,130]
 
@@ -215,7 +233,13 @@ Geometry=[834,445,504,297]
 Geometry=[848,459,523,412]
 
 [DebugWindow/me]
-Geometry=[2628,630,252,460]
+Geometry=[834,512,252,56]
+
+[DebugWindow/me.AllEntries]
+Geometry=[2351,528,252,276]
+
+[DebugWindow/me.AllLists]
+Geometry=[2351,528,252,276]
 
 [DebugWindow/me.Key_dlist]
 Geometry=[2158,799,252,56]
@@ -254,7 +278,10 @@ Geometry=[834,512,252,56]
 Geometry=[2754,498,252,56]
 
 [DebugWindow/todoList]
-Geometry=[834,512,252,56]
+Geometry=[834,512,730,216]
+
+[DebugWindow/todoList["OnNew_PID{1886296}"]]
+Geometry=[848,526,506,210]
 
 [DebugWindow/userclass]
 Geometry=[2754,498,252,56]
@@ -287,16 +314,24 @@ Diagonals=0
 Lock=False
 
 [FProjectVersion]
-LastCommit="Fast unsafe causes memory access errors - removed\n\n* Bug: fast unsafe causes seg faults .. removed"
+LastCommit="Updated Readme to contain instructions on running demo\n\n* opt: Update the readme with demo instructions"
 
 [OpenFile]
-Count=0
+Count=6
+File[1]=".src/Examples/Demo/Demo_user1.module:26.56"
+File[2]="Demo/demo_user1:23.38"
+File[3]=".src/ShmMem/ShmVarStorage.class:15.310"
+Active=6
+File[4]="Demo/demo_monitornew:3.37"
+File[5]=".src/ShmMem/ShmList.class:46.721"
+File[6]=".src/ShmMem/ShmNotifyEntry.class:44.75"
 
 [Package]
 Dir="~/Downloads/"
 
 [Watches]
-Count=2
+Count=3
 Watch[1]="param"
 Watch[2]="me"
+Watch[3]="notifyqueue[0]"
 
