--- a/.settings
+++ b/.settings
@@ -3,15 +3,13 @@ shmMem=[234]
 ShmNotifyEntry=[54]
 
 [Debug]
-Breakpoints={}
+Breakpoints={"ShmList":[630,744],"ShmNotify":[306],"ShmListVariables":[41,85,10]}
 UseTerminal=False
 RedirectStderr=False
 UseHttpServer=False
 Remote=False
 Profiling=False
 Environment=["GB_NO_JIT=1"]
-RemoteEnvironment=[]
-Arguments=[]
 
 [DebugWindow]
 Count=0
@@ -26,10 +24,16 @@ Geometry=[834,485,515,237]
 Geometry=[834,445,411,261]
 
 [DebugWindow/CurrentItem]
-Geometry=[3025,771,252,56]
+Geometry=[834,512,252,56]
+
+[DebugWindow/Elements]
+Geometry=[834,288,252,590]
+
+[DebugWindow/Entry]
+Geometry=[834,512,252,56]
 
 [DebugWindow/ListHead]
-Geometry=[834,512,504,387]
+Geometry=[834,512,252,56]
 
 [DebugWindow/ListHead.Tag]
 Geometry=[834,498,252,56]
@@ -49,8 +53,14 @@ Geometry=[2768,429,563,380]
 [DebugWindow/Me]
 Geometry=[834,498,252,58]
 
+[DebugWindow/MyElement]
+Geometry=[834,512,252,56]
+
 [DebugWindow/MyQueue]
-Geometry=[833,502,639,420]
+Geometry=[833,502,639,504]
+
+[DebugWindow/MyShare]
+Geometry=[834,382,252,320]
 
 [DebugWindow/NewElement]
 Geometry=[2203,217,252,56]
@@ -98,13 +108,19 @@ Geometry=[2782,446,252,190]
 Geometry=[745,561,252,304]
 
 [DebugWindow/PidQueue]
-Geometry=[834,512,252,56]
+Geometry=[885,414,612,584]
+
+[DebugWindow/PidQueue.AllEntries]
+Geometry=[848,526,471,276]
+
+[DebugWindow/PidQueue.AllEntries[0]]
+Geometry=[862,540,252,190]
 
 [DebugWindow/PidQueue.AllLists]
-Geometry=[2477,150,252,56]
+Geometry=[848,526,252,276]
 
 [DebugWindow/PidQueue.AllLists[0]]
-Geometry=[1961,32,463,360]
+Geometry=[862,540,463,480]
 
 [DebugWindow/PidQueue.AllLists[0].ListHead]
 Geometry=[2058,354,310,310]
@@ -115,11 +131,23 @@ Geometry=[2026,109,419,445]
 [DebugWindow/PidQueue.AllLists[1].AllLists]
 Geometry=[1975,46,519,348]
 
+[DebugWindow/PidQueue.Key_dlist]
+Geometry=[848,526,252,330]
+
 [DebugWindow/PidQueue.ListHead]
-Geometry=[2276,183,252,56]
+Geometry=[899,428,743,377]
+
+[DebugWindow/PidQueue.Next]
+Geometry=[899,428,252,190]
+
+[DebugWindow/PidQueue.Prev]
+Geometry=[899,428,252,190]
 
 [DebugWindow/RandomName]
 Geometry=[834,512,252,56]
+
+[DebugWindow/Source]
+Geometry=[834,375,252,330]
 
 [DebugWindow/Sym]
 Geometry=[2184,263,252,56]
@@ -140,7 +168,7 @@ Geometry=[2454,356,252,170]
 Geometry=[834,402,252,276]
 
 [DebugWindow/SymMem]
-Geometry=[2836,649,252,58]
+Geometry=[2836,615,252,436]
 
 [DebugWindow/SymMem.Table]
 Geometry=[2039,649,252,220]
@@ -211,8 +239,26 @@ Geometry=[2796,350,252,276]
 [DebugWindow/bork.AllLists[1]]
 Geometry=[2782,336,488,456]
 
+[DebugWindow/eList]
+Geometry=[2186,559,252,100]
+
+[DebugWindow/eList[0]]
+Geometry=[848,416,252,230]
+
+[DebugWindow/eList[1]]
+Geometry=[848,416,252,230]
+
+[DebugWindow/eList[1].dList]
+Geometry=[862,430,252,330]
+
 [DebugWindow/element]
-Geometry=[2754,498,252,56]
+Geometry=[355,298,392,230]
+
+[DebugWindow/element.dList]
+Geometry=[369,312,442,385]
+
+[DebugWindow/item]
+Geometry=[834,512,252,56]
 
 [DebugWindow/items]
 Geometry=[834,402,703,276]
@@ -233,13 +279,16 @@ Geometry=[834,445,504,297]
 Geometry=[848,459,523,412]
 
 [DebugWindow/me]
-Geometry=[834,512,252,56]
+Geometry=[834,512,774,476]
 
 [DebugWindow/me.AllEntries]
-Geometry=[2351,528,252,276]
+Geometry=[848,526,632,276]
+
+[DebugWindow/me.AllEntries[0]]
+Geometry=[862,540,252,190]
 
 [DebugWindow/me.AllLists]
-Geometry=[2351,528,252,276]
+Geometry=[848,526,549,405]
 
 [DebugWindow/me.Key_dlist]
 Geometry=[2158,799,252,56]
@@ -253,11 +302,20 @@ Geometry=[834,512,252,56]
 [DebugWindow/newlist.ListHead]
 Geometry=[834,512,252,56]
 
+[DebugWindow/pList]
+Geometry=[834,402,252,276]
+
+[DebugWindow/pList[0]]
+Geometry=[848,416,569,330]
+
 [DebugWindow/param]
 Geometry=[834,498,252,56]
 
 [DebugWindow/param.All]
 Geometry=[848,526,622,368]
+
+[DebugWindow/ptrPrev]
+Geometry=[834,512,252,56]
 
 [DebugWindow/srcstr]
 Geometry=[2664,390,339,339]
@@ -298,6 +356,9 @@ Geometry=[2754,498,252,320]
 [DebugWindow/vptr]
 Geometry=[834,512,252,110]
 
+[DebugWindow/xObject]
+Geometry=[834,288,252,508]
+
 [Executable]
 DoNotIncrementVersion=False
 NoTestModule=False
@@ -317,21 +378,24 @@ Lock=False
 LastCommit="Updated Readme to contain instructions on running demo\n\n* opt: Update the readme with demo instructions"
 
 [OpenFile]
-Count=6
-File[1]=".src/Examples/Demo/Demo_user1.module:26.56"
-File[2]="Demo/demo_user1:23.38"
-File[3]=".src/ShmMem/ShmVarStorage.class:15.310"
-Active=6
-File[4]="Demo/demo_monitornew:3.37"
-File[5]=".src/ShmMem/ShmList.class:46.721"
-File[6]=".src/ShmMem/ShmNotifyEntry.class:44.75"
+Count=7
+File[1]=".src/Examples/vTestApps/General Tests/ShmListVariables.module:0.20"
+File[2]=".src/ShmMem/ShmListEntry.class:19.25"
+Active=1
+File[3]=".src/ShmMem/ShmVarStorage.class:0.694"
+File[4]=".src/ShmMem/shmMem.class:3.109"
+File[5]=".src/ShmMem/ShmList.class:28.1209"
+File[6]=".src/ShmMem/ShmManage.class:48.439"
+File[7]=".src/ShmMem/ShmQueue.class:19.13"
 
 [Package]
 Dir="~/Downloads/"
 
 [Watches]
-Count=3
+Count=5
 Watch[1]="param"
 Watch[2]="me"
 Watch[3]="notifyqueue[0]"
+Watch[4]="error.text"
+Watch[5]="application.id"
 
