--- a/.project
+++ b/.project
@@ -14,11 +14,20 @@ Address=justlostintime@gmail.com
 Url=https://github.com/justlostintime
 License=General Public License
 Prefix=1
-PackageName=westwood-shmmem-2.1.9
+PackageName=westwood-shmmem-2.1.10
+CreateEachDirectory=1
 RuntimeVersion="3.18"
 Packager=1
-Systems=ubuntu
-Groups=ubuntu:"utils"
+Systems=archlinux,autotools,debian,fedora,mageia,slackware,suse,ubuntu
+SameDependencies=1
+SameFiles=1
+Groups=archlinux:"libs"
+Groups=debian:"libs"
+Groups=fedora:"Development/Libraries"
+Groups=mageia:"System/Libraries"
+Groups=slackware:"Development/Libraries"
+Groups=suse:"Development/Libraries/Other"
+Groups=ubuntu:"libs"
 Tags=System,Utility
 GambasVersion=3.19
 WebSite=https://github.com/justlostintime/ShmMem
