--- a/.settings
+++ b/.settings
@@ -393,10 +393,10 @@ Diagonals=0
 Lock=False
 
 [FProjectVersion]
-LastCommit="Many bug fixes\n\n* new: Added demo script to mintor the shared memory database\n* Opt: removed all the debug messages\n* Opt: Changed /usr/bin/gbs3 to /usr/bin/env gbs3 in scripts\n* BUG: _free does not work as it is called with a copy not the original"
+LastCommit="Stable version\n\n* new: Added demo script to mintor the shared memory database\n* Opt: removed all the debug messages\n* Opt: Changed /usr/bin/gbs3 to /usr/bin/env gbs3 in scripts\n* BUG: _free does not work as it is called with a copy not the original"
 
 [OpenFile]
-Count=3
+Count=0
 File[1]=".src/UnitTestShm/NewProcessUsingNamedBG.class:0.0"
 File[2]=".src/UnitTestShm/NewTaskLoadTesting.class:0.0"
 Active=3
